Revert "Add ca_truster job to trust CA certs configured by manifest"
This reverts commit 064fcac3ebc69668f64c585214c5d5ac09b17907.

--- a/templates/cf-infrastructure-vsphere.yml
+++ b/templates/cf-infrastructure-vsphere.yml
@@ -191,6 +191,12 @@ jobs:
     networks:
       - name: cf2
         static_ips: (( static_ips(17, 18, 19) ))
+  # using login template, that supports self-signed certs
+  - name: login_z1
+    templates: 
+    - name: login
+    - name: metron_agent
+      release: cf
 
   - name: acceptance_tests
     instances: 1
