update submodule referance
[#73490556]

--- a/.gitmodules
+++ b/.gitmodules
@@ -64,9 +64,6 @@
 [submodule "src/loggregator"]
 	path = src/loggregator
 	url = https://github.com/cloudfoundry/loggregator
-[submodule "src/acceptance-tests"]
-	path = src/github.com/cloudfoundry/cf-acceptance-tests
-	url = https://github.com/cloudfoundry/cf-acceptance-tests
 [submodule "packages/ruby"]
 	path = packages/ruby
 	url = https://github.com/cloudfoundry/ruby-package
@@ -103,3 +100,6 @@
 [submodule "src/statsd-injector"]
 	path = src/statsd-injector
 	url = https://github.com/cloudfoundry/statsd-injector.git
+[submodule "src/github.com/cloudfoundry/cf-acceptance-tests"]
+	path = src/github.com/cloudfoundry/cf-acceptance-tests
+	url = https://github.com/cloudfoundry/cf-acceptance-tests
