--- a/templates/cf-infrastructure-warden.yml
+++ b/templates/cf-infrastructure-warden.yml
@@ -220,7 +220,7 @@ properties:
     skip_ssl_validation: true
     nodes: 1
     system_domain: (( domain ))
-    oauth_password: gorouter-secret
+    client_secret: gorouter-secret
     include_routing_api: true
 
   smoke_tests:
