--- a/templates/cf-infrastructure-warden.yml
+++ b/templates/cf-infrastructure-warden.yml
@@ -134,6 +134,7 @@ properties:
       users:
       - admin|admin|scim.write,scim.read,openid,cloud_controller.admin,clients.read,clients.write,doppler.firehose
     no_ssl: true
+    protocol: http
 
   login:
     protocol: http
@@ -492,6 +493,8 @@ jobs:
       - name: cloud_controller_clock
         release: cf
       - name: cloud_controller_worker
+        release: cf
+      - name: route_registrar
         release: cf
       - name: routing-api
         release: cf
