--- a/templates/cf-properties.yml
+++ b/templates/cf-properties.yml
@@ -231,8 +231,7 @@ properties:
   uaa:
     catalina_opts: (( merge ))
 
-    protocol: https
-    url: (( protocol "://uaa." domain ))
+    url: (( "https://uaa." domain ))
     issuer: (( url ))
 
     no_ssl: false
