Initial work for an all in one tool that cf-deployment uses for manifest generation
[#102512586]

Signed-off-by: Dan Lavine <dlavine@us.ibm.com>

--- a/templates/cf-infrastructure-warden.yml
+++ b/templates/cf-infrastructure-warden.yml
@@ -6,6 +6,7 @@ meta:
     local_root: /var/vcap/store
 
   stemcell:
+    <<: (( merge ))
     name: bosh-warden-boshlite-ubuntu-trusty-go_agent
     version: latest
 
