--- a/.gitmodules
+++ b/.gitmodules
@@ -97,3 +97,6 @@
 [submodule "src/consul-release"]
 	path = src/consul-release
 	url = https://github.com/cloudfoundry-incubator/consul-release.git
+[submodule "src/github.com/cloudfoundry-incubator/cf-routing-release"]
+	path = src/github.com/cloudfoundry-incubator/cf-routing-release
+	url = git@github.com:cloudfoundry-incubator/cf-routing-release.git
