--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -11,7 +11,7 @@ postgres/postgresql-9.0.3.tar.gz:
   object_id: rest/objects/4e4e78bca21e122004e4e8ec647a5404f306b0ec246e
   sha: c8fb5d1d7930e78211e554bb5751183a8148d0ee
   size: 18335858
-debian_nfs_server/nfs-kernel-server_1%3a1.2.0-4ubuntu4.1_amd64.deb:
+debian_nfs_server/nfs-kernel-server_1.2.8-9_amd64.deb:
   object_id: rest/objects/4e4e78bca41e122204e4e9863d076304f307136db190
   sha: a44b3f8319984bace61f21bb6d15cee1419e5bf3
   size: 169618
