Temporarily introduce the shared_secrets here
[#106137298]

Signed-off-by: Michael Fraenkel <fraenkel@us.ibm.com>

--- a/templates/cf-jobs.yml
+++ b/templates/cf-jobs.yml
@@ -681,6 +681,14 @@ properties:
   loggregator_endpoint:
     shared_secret: (( merge ))
 
+  doppler:
+    <<: (( merge ))
+    shared_secret: (( .properties.loggregator_endpoint.shared_secret ))
+
+  metron_agent:
+    <<: (( merge ))
+    shared_secret: (( .properties.loggregator_endpoint.shared_secret ))
+
   doppler_endpoint:
     shared_secret: (( .properties.loggregator_endpoint.shared_secret ))
 
