--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,8 @@
   url = https://github.com/cloudfoundry/dea_ng.git
 [submodule "src/github.com/cloudfoundry/gorouter"]
 	path = src/github.com/cloudfoundry/gorouter
-	url = https://github.com/cloudfoundry/gorouter
+	url = https://github.com/stoyanr/gorouter
+	branch = access-log-syslog
 [submodule "src/stager"]
   path = src/stager
   url = https://github.com/cloudfoundry/stager.git
